Handle local storage reset

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -22,6 +22,7 @@
     <script src="config.js"></script>
     <script src="services/index.client.service.js"></script>
     <script src="views/index.controller.js"></script>
+    <script src="angular-uuid.js"></script>
 
   </head>
   <body>
